--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "normalize.css": "8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.2",
     "react-loader-spinner": "^5.3.4",
