--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.0",
+    "gh-pages": "^5.0.0",
     "normalize.css": "8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
