--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.0",
+    "classnames": "^2.3.2",
     "gh-pages": "^5.0.0",
     "normalize.css": "8.0.1",
     "prop-types": "^15.8.1",
@@ -20,6 +21,7 @@
     "react-intersection-observer": "^9.4.2",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
