--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/react-dom": "^18.0.10",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.0",
     "classnames": "^2.3.2",
-    "gh-pages": "^5.0.0",
     "normalize.css": "8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -33,7 +32,8 @@
     "@types/jest": "27.5.2",
     "@types/node": "16.11.65",
     "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6"
+    "@types/react-dom": "18.0.6",
+    "gh-pages": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
