--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.0",
     "classnames": "^2.3.2",
     "normalize.css": "8.0.1",
@@ -31,8 +29,9 @@
   "devDependencies": {
     "@types/jest": "27.5.2",
     "@types/node": "16.11.65",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^9.0.1",
     "gh-pages": "^5.0.0"
   },
   "scripts": {
