--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.0",
-    "nanoid": "^4.0.0",
     "classnames": "^2.3.2",
+    "nanoid": "^4.0.0",
     "normalize.css": "8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -30,12 +29,16 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "@types/uuid": "^9.0.1",
-    "gh-pages": "^5.0.0"
+    "fetch-mock": "^9.11.0",
+    "gh-pages": "^5.0.0",
+    "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4"
   },
   "scripts": {
     "predeploy": "npm run build",
