--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-burger",
   "version": "0.1.0",
-  "homepage": ".",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
@@ -35,6 +35,8 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "@types/uuid": "^9.0.1",
+    "cypress": "^12.10.0",
+    "eslint-plugin-cypress": "^2.13.2",
     "fetch-mock": "^9.11.0",
     "gh-pages": "^5.0.0",
     "react-test-renderer": "^18.2.0",
@@ -46,7 +48,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "./node_modules/.bin/cypress open"
   },
   "eslintConfig": {
     "extends": [
