--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "es5",
     "lib": [
       "dom",
       "dom.iterable",
@@ -20,10 +20,21 @@
     "noEmit": true,
     "jsx": "react-jsx",
     // "jsx": "react",
-    "types": ["cypress"]
+    "types": [
+      "node",
+      "cypress",
+      "jest"
+    ]
   },
   "include": [
     "src",
     "react-app-env.d.ts",
+  ],
+  "exclude": [
+    "./cypress.config.ts",
+    "cypress",
+    "**/*.cy.tsx",
+    "**/*.spec.ts"
   ]
 }
+
